# struct_serialization_generator

./: .clang-format  .gitignore  CMakeLists.txt
src/: main.cpp  simple_serializable_struct.h
src/serialization/: generic_data_type.h
src/serialization/scripts/: find_annos_and_write_serial_funcs.py
